wrong margin between reviews and articles fix

--- a/public/styles/layout/_reviews.scss
+++ b/public/styles/layout/_reviews.scss
@@ -31,6 +31,5 @@
     width: 0.8rem;
     background-color: $color-grey-1;
     border-radius: 50%;
-    margin-bottom: 4rem;
   }
 }
